--- a/index.css
+++ b/index.css
@@ -73,3 +73,9 @@ img{
     cursor: pointer;
 }
 
+@media only screen and (max-width: 780px){
+    .container{
+        margin-top: 10em;
+    }
+}
+
