--- a/index.css
+++ b/index.css
@@ -1,82 +1,136 @@
-:root{
-    --primary-color: rgba(172,20,172,1);
-    --secondary-color: rgba(220,67,132,1);
-    --third-color: rgba(255,100,100,1);
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
 }
-   
-html{
-    height: 100%;
-}
-
 
 body {
-
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background: rgb(172,20,172); 
-    background-image: linear-gradient(45deg, rgba(172,20,172,1) 0%, rgba(220,67,132,1) 50%, rgba(255,100,100,1) 100%);
-    font-family: "Cooper Black";
+    min-height: 100vh;
+    overflow-x: hidden;
+    background: linear-gradient(#2b1055, #7597de);
 }
 
-.container{
-    /*display: none;*/
-    
-    background: white;
-    padding: 2.5em;
-    /* text-align: center; */
-    /*position: relative;*/ /* mit position: relative ist der pfeil innerhalb des containers | ohne ist er unten am Bildschirmrand*/
-    border-radius: 15px;
-    width: 280px;
-    margin: auto;
-    margin-top: 20em;
-}
-
-iframe{
-    width: 100%;
-    height: 929px;
-}
-
-
-
-.container label{
-    color: var(--third-color);
-    font-size: 24px;
-    
-}
-
-.container input{
-    border: 1.5px solid var(--third-color);
-    border-radius: 10px;
-    background: var(--third-color);
-    padding: .3em;
-    color: white;
-    font-family: "Cooper Black";
-    margin-top: .8em;
-    margin-bottom: .8em;
-    font-size: 16px;
-}
-.container input[type=text]:focus {
-    outline: none;
-}
-
-img{
-    background: white;
-    margin-top: 1em;
-    border: none;
-    padding: 10px 15px;
-    color: white;
-    font-family: "cooper Black";
-    border-radius: 10px;
+header {
     position: absolute;
-    right: 1em;
-    bottom: 1em;
-    width: 3em;
-    cursor: pointer;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 30px 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 10000;
 }
 
-@media only screen and (max-width: 780px){
-    .container{
-        margin-top: 10em;
-    }
+header .logo {
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
+header ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header ul li {
+    list-style: none;
+    margin-left: 20px;
+}
+
+header ul li a {
+    text-decoration: none;
+    padding: 6px 15px;
+    color: #fff;
+    border-radius: 20px;
+}
+
+header ul li a:hover, .active {
+    background: #fff;
+    color: #2b1055;
+}
+
+section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+section::before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, #1c0522, transparent);
+    z-index: 1000;
+}
+
+section img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    pointer-events: none;
+}
+
+section img#moon {
+    mix-blend-mode: screen;
+}
+
+section img#mountains_front {
+    z-index: 10;
+}
+
+#text {
+    position: absolute;
+    right: -350px;
+    color: #fff;
+    white-space: nowrap;
+    font-size: 7.5vw;
+    z-index: 9;
+    
+}
+
+#btn{
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 30px;
+    border-radius: 40px;
+    background: #fff;
+    color: #2b1055;
+    font-size: 1.5em;
+    z-index: 9;
+    transform: translateY(100px);
+}
+
+.sec {
+    position: relative;
+    padding: 100px;
+    background: #1c0522;
+}
+
+.sec h2{
+    font-size: 3.5em;
+    margin-bottom: 10px;
+    color: #fff;
+}
+
+.sec p{
+    font-size: 1.2em;
+    color: #fff;
+}
